<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlaylistDetails">

    <LinearLayout

        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <RelativeLayout
            android:id="@+id/relativeLayoutP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/playlistNamePD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="122dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="121dp"
                android:contentDescription="@string/playlist_btn"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/playlist_btn"
                android:textSize="28sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/backBtnPD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginBottom="0dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/back_btn"
                app:srcCompat="@drawable/ic_baseline_arrow_back_ios_24" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/linerlayoutDetails"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_below="@+id/relativeLayoutP"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="0dp"
            android:orientation="horizontal">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/playlistImgPD"
                android:layout_width="250dp"
                android:layout_height="match_parent"
                android:src="@drawable/splash_screen" />

            <TextView
                android:id="@+id/moreInfoPD"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="5dp"
                android:background="@color/cool_pink"
                android:gravity="center|start"
                android:text="@string/playlist_name"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/playlistDetailsRV"
            android:layout_width="match_parent"
            android:layout_height="700dp"
            android:paddingBottom="280dp"
            android:scrollbarThumbVertical="@drawable/downarrow"
            android:scrollbars="vertical" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout">

    </LinearLayout>

    <Button
        android:id="@+id/addBtnPD"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/white"
        android:drawableLeft="@drawable/add_icon"
        android:text="@string/add_song"
        android:textColor="@color/cool_pink"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/removeBtnPD"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/white"
        android:drawableLeft="@drawable/ic_baseline_remove_circle_outline_24"
        android:drawableTint="@color/black"


        android:text="@string/remove_all"
        android:textColor="@color/cool_pink"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/addBtnPD" />


</androidx.constraintlayout.widget.ConstraintLayout>