<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".PlayerActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_weight="0.5"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/deleteplayerBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:contentDescription="@string/back_btn"
            app:srcCompat="@drawable/ic_baseline_arrow_back_ios_24"
            tools:ignore="VectorDrawableCompat" />

        <ImageButton
            android:id="@+id/favouriteBtnPA"
            android:layout_width="58dp"
            android:layout_height="60dp"
            android:layout_alignParentEnd="true"
            android:background="@android:color/white"
            android:contentDescription="@string/favourite_empty"
            app:srcCompat="@drawable/favouirte_empty_icon"
            tools:ignore="VectorDrawableCompat" />
    </RelativeLayout>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/songImgPA"
        android:layout_width="250dp"
        android:layout_height="200dp"
        android:src="@drawable/splash_screen"
        android:layout_weight="0.5">

    </com.google.android.material.imageview.ShapeableImageView>

    <TextView
        android:id="@+id/songNamePA"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_weight="0.5"
        android:text="@string/song_name"
        android:textAlignment="center"
        android:textColor="#0C0C0C"
        android:textSize="18sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/previousBtnPA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:backgroundTint="@color/green"
            android:clickable="true"
            android:focusable="true"

            app:srcCompat="@drawable/ic_baseline_arrow_back_ios_24"
            tools:ignore="DuplicateIds,VectorDrawableCompat" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/playPauseBtnPA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:backgroundTint="@color/red"
            android:clickable="true"

            app:shapeAppearanceOverlay="@style/curved"
            app:srcCompat="@drawable/ic_baseline_pause_24"
            tools:ignore="VectorDrawableCompat" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/nextBtnPA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="70dp"
            android:backgroundTint="@color/green"
            android:clickable="true"

            app:srcCompat="@drawable/ic_baseline_navigate_next_24"
            tools:ignore="VectorDrawableCompat" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="384dp"
        android:layout_height="1dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="20dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvSeekBarStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:gravity="center"
            android:text="@string/seek_bar"
            android:textStyle="bold"
            android:textColor="@color/black"
            />

        <androidx.appcompat.widget.AppCompatSeekBar
            android:id="@+id/seekbarPA"
            android:layout_width="280dp"
            android:layout_height="match_parent"

            android:layout_marginStart="50dp"
            android:layout_marginBottom="60dp" />


        <TextView
            android:id="@+id/tvSeekBarEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="330dp"
            android:gravity="center"
            android:text="Loading..."
            android:textColor="@color/black" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:layout_weight="0.5"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/repeatBtnPA"
            android:layout_width="55dp"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:contentDescription="@string/repeat_btn"
            app:srcCompat="@drawable/repeat_btn"
            tools:ignore="VectorDrawableCompat" />

        <ImageButton
            android:id="@+id/shareBtnPA"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:background="@android:color/transparent"
            android:contentDescription="@string/share_btn"
            app:srcCompat="@drawable/ic_baseline_share_24"
            tools:ignore="VectorDrawableCompat" />


    </RelativeLayout>


</LinearLayout>